<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1" >

    <TableRow>
        <TextView
            android:id="@+id/name"
            android:layout_marginBottom="15dp"
            android:layout_span="2"
            android:gravity="center_horizontal"
            android:textSize="35dp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_span="3"
            android:text="@string/contactDetails"
            android:textSize="20dp" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:layout_marginBottom="15dp"
        android:background="#00bfff" />

    <TableRow>

        <TextView
            android:padding="5dip"
            android:text="@string/Office"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/office"
            android:layout_span="3"
            android:gravity="left"
            android:padding="5dip"
            android:paddingLeft="15dp"
            android:textSize="25dp" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="5dip"
            android:text="@string/Phone"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/phone"
            android:layout_span="3"
            android:gravity="left"
            android:padding="5dip"
            android:paddingLeft="15dp"
            android:textSize="25dp" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="5dip"
            android:text="@string/Email"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/email"
            android:layout_marginBottom="15dp"
            android:layout_span="3"
            android:gravity="left"
            android:padding="5dip"
            android:paddingLeft="15dp"
            android:textSize="25dp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_span="3"
            android:text="@string/Rating"
            android:textSize="20dp" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:layout_marginBottom="15dp"
        android:background="#00bfff" />

    <TableRow>

        <TextView
            android:padding="5dip"
            android:text="@string/average"
            android:textSize="20dp" />

        <LinearLayout android:layout_width="wrap_content" >

            <RatingBar
                android:id="@+id/average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="1" />
        </LinearLayout>
    </TableRow>

    <TableRow>

        <TextView
            android:padding="5dip"
            android:text="@string/totalRatings"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/totalRating"
            android:layout_gravity="left"
            android:layout_span="3"
            android:padding="5dip"
            android:paddingLeft="15dp"
            android:textSize="25dp" />
    </TableRow>

    <View
        android:layout_height="25dip"
        android:background="#000000" />

    <TableRow>

        <Button
            android:id="@+id/comment"
            android:layout_width="250dp"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:layout_span="2"
            android:onClick="viewComments"
            android:text="@string/viewComments"
            android:textSize="25dp" />
    </TableRow>

    <View
        android:layout_height="25dip"
        android:background="#000000" />

    <TableRow>

        <Button
            android:id="@+id/rate"
            android:layout_width="350dp"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:layout_span="3"
            android:text="@string/rateButton"
            android:textSize="25dp" />
    </TableRow>

</TableLayout>