<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/professorname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rating"
        android:textSize="20dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="15dp"
        android:background="#00bfff" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Comments"
        android:textSize="20dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="15dp"
        android:background="#00bfff" />

    <EditText
        android:id="@+id/commentsText"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:gravity="top"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit" />

</LinearLayout>